syntax = "proto3";

option go_package = "/rpc";

service RaftNode {
  rpc AppendEntries(AppendEntriesIn) returns (AppendEntriesOut);
  rpc RequestVote(RequestVoteIn) returns (RequestVoteOut);
}

message AppendEntriesIn{
  int64 term = 1;
  int64 leaderId = 2;
  int64 leaderCommitIdx = 3;
  int64 prevLogIdx = 4;
  int64 prevLogTerm = 5;
  repeated Entry entries = 6;
}

message AppendEntriesOut{
  int64 term = 1;
  bool success = 2;
}

message RequestVoteIn{
  int64 term = 1;
  int64 candidateId = 2;
  int64 lastLogIdx = 3;
  int64 lastLogTerm = 4;
}

message RequestVoteOut{
  int64 term = 1;
  bool voteGranted = 2;
}

message Entry{
  int64 id = 1;
  string value = 2;
  int64 term = 3;
}